# SPDX-FileCopyrightText: 2021, 2022 ImpulsoGov <contato@impulsogov.org>
#
# SPDX-License-Identifier: MIT


[tool.poetry]

name = "impulsoetl"
version = "0.1.0"
description = "Ingestão, tratamento e caregamento de dados dos serviços de saúde mental do SUS."
# readme = "README.md"
license = "MIT"

authors = ["ImpulsoGov <contato@impulsogov.org>"]

[tool.poetry.dependencies]

python = ">=3.8.1, <3.10"
pandas = "1.3.3"
selenium = "4.1.0"
"psycopg2-binary" = "^2.9.3"
scipy = "~1.8.1"

# dependencias impulsoetl
frozendict = { version = "2.1.1", optional = true }
frozenlist = { version = "1.2.0", optional = true }
loguru = { version = "0.5.3", optional = true }
pyjanitor = { version = "0.21.2", optional = true }
pysus = { version = "0.5.10", optional = true }
python-dotenv = { version = "0.19.2", optional = true }
selenium-driver-updater = { version = "5.1.3", optional = true }
SQLAlchemy = {extras = ["mypy"], version = "1.4.27", optional = true }
SQLAlchemy-Continuum = { version = "1.3.11", optional = true }
toolz = { version = "0.11.2", optional = true }
types-frozendict = { version = "0.1.6", optional = true }
types-requests = { version = "2.26.1", optional = true }
Unidecode = { version = "1.3.2", optional = true }

# NOTE: A instalação do PySUS depende da biblioteca GDAL, que pode precisar ser
# adicionada manualmente. Ver
# https://gist.github.com/cspanring/5680334#gistcomment-1675829
# e https://github.com/python-poetry/poetry/issues/845
# GDAL = "3.3.2"
roman = {version = "^3.3", extras = ["impulsoetl"]}
types-psycopg2 = "^2.9.11"
more-itertools = {version = "^8.12.0", extras = ["impulsoetl"]}
uuid6 = "^2022.6.25"


[tool.poetry.dev-dependencies]

bandit = "1.7.1"
black = "==20.8b1"
coverage = { git = "https://github.com/nedbat/coveragepy.git", tag = "6.0b1" }
dlint = "0.12.0"
flake8 = "4.0.1"
isort = "5.10.1"
mypy = "0.910"
pre-commit = "2.15.0"
pycln = "1.1.0"
pytest = "6.2.5"
pytest-cov = "2.12.1"
pyupgrade = "2.29.1"
reuse = "0.13.0"
safety = "1.10.3"
wemake-python-styleguide="0.0.1"
pytest-testmon = "^1.2.3"


[tool.poetry.extras]

impulsoetl = [
    "frozendict",
    "frozenlist",
    "loguru",
    "pyjanitor",
    "psycopg2-binary",
    "pysus",
    "python-dotenv",
    "roman",
    "selenium-driver-updater",
    "SQLAlchemy",
    "SQLAlchemy-Continuum",
    "toolz",
    "types-frozendict",
    "types-requests",
    "Unidecode"
]

analise = [
    "ipykernel",
    "jupyter"
]

[tool.bandit]
skips = ["B101"]

[tool.black]

line-length = 79
target-version = ["py36", "py37", "py38"]

[tool.isort]

multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79
combine_as_imports = true

[tool.mypy]

files=["src/impulsoetl/**/*.py", "tests/**/*.py"]
ignore_missing_imports=true
plugins = [
    "sqlalchemy.ext.mypy.plugin",
    "numpy.typing.mypy_plugin"
]

[[tool.mypy.overrides]]
module = "tests.*"

[tool.pytest.ini_options]

testpaths = [
    "tests"
]
python_files = [
    "teste_*.py",
]
python_classes = [
    "Teste*",
]
python_functions = [
    "teste_*",
]
markers = [
    "unitario",
    "integracao",
]
log_cli = true

[build-system]

requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

