# SPDX-FileCopyrightText: 2021, 2022 ImpulsoGov <contato@impulsogov.org>
#
# SPDX-License-Identifier: MIT


[tool.poetry]

name = "impulsoetl"
version = "0.2.0"
description = "Ingestão, tratamento e caregamento de dados dos serviços de saúde mental do SUS."
readme = "README.md"
license = "MIT"

authors = ["ImpulsoGov <contato@impulsogov.org>"]

[tool.poetry.dependencies]

python = ">=3.10,<3.11"
cryptography = ">=38.0.3"
"psycopg2-binary" = "^2.9.3"
scipy = "~1.8.1"
frozendict = "2.1.1"
frozenlist = "1.2.0"
loguru = "0.5.3"
pyjanitor = "0.21.2"
python-dotenv = "0.19.2"
SQLAlchemy = {extras = ["mypy"], version = "1.4.27"}
toolz = "0.11.2"
types-frozendict = "0.1.6"
types-requests = "2.26.1"
Unidecode = "1.3.2"
roman = "^3.3"
types-psycopg2 = "^2.9.11"
more-itertools = "^8.12.0"
uuid6 = "^2022.6.25"
lxml = "^4.9.1"
xlrd = "^2.0.1"
beautifulsoup4 = "^4.11.2"
pandas = "1.4.3"
pyreaddbc = "1.0.0"
dbfread = "2.0.7"

[tool.poetry.group.prefect]
optional = true

[tool.poetry.group.prefect.dependencies]
prefect = ">=2.10.8, <3.0"

[tool.poetry.group.dev.dependencies]

bandit = "1.7.1"
black = "==20.8b1"
coverage = { git = "https://github.com/nedbat/coveragepy.git", tag = "6.0b1" }
dlint = "0.12.0"
flake8 = "4.0.1"
isort = "5.10.1"
mypy = "0.910"
pre-commit = "2.15.0"
pycln = "1.1.0"
pytest = "7.2.0"
pytest-cov = "2.12.1"
pyupgrade = "2.29.1"
reuse = "0.13.0"
safety = "1.10.3"
wemake-python-styleguide="0.0.1"
pytest-testmon = "^1.2.3"

[tool.poetry.extras]

analise = [
    "ipykernel",
    "jupyter"
]

[tool.bandit]
skips = ["B101"]

[tool.black]

line-length = 79
target-version = ["py38", "py39"]

[tool.isort]

multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79
combine_as_imports = true

[tool.mypy]

files=["src/impulsoetl/**/*.py", "tests/**/*.py"]
ignore_missing_imports=true
plugins = [
    "sqlalchemy.ext.mypy.plugin",
    "numpy.typing.mypy_plugin"
]

[[tool.mypy.overrides]]
module = "tests.*"

[tool.pytest.ini_options]

testpaths = [
    "tests"
]
python_files = [
    "teste_*.py",
]
python_classes = [
    "Teste*",
]
python_functions = [
    "teste_*",
]
markers = [
    "unitario",
    "integracao",
]
log_cli = true

[build-system]

requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

